<resources>
    <string name="not_implemented">Not implemented</string>
    <string name="app_name">Notes</string>
    <string name="app_version" translatable="false">v0.9-alpha</string>
    <string name="action_bar_drawer_toggle_open">Open drawer</string>
    <string name="action_bar_drawer_toggle_close">Close drawer</string>
    <string name="activity_image_note_gallery">Open Gallery</string>
    <string name="activity_image_note_camera">Open Camera</string>
    <string name="activity_image_note_save">Save</string>
    <string name="activity_image_note_share_button">Share</string>
    <string name="activity_image_note_share">Share</string>
    <string name="activity_image_note_share_error">Cannot share not saved images</string>
    <string name="activity_image_note_delete">Delete</string>
    <string name="activity_image_note_no_image">There is no image chosen</string>
    <string name="activity_image_note_error_create_file" translatable="false">ERROR: CANNOT CREATE FILE</string>
    <string name="activity_image_save_OK">Data saved</string>
    <string name="activity_image_save_ERROR">Save error</string>
    <string name="activity_image_note_dialog_remove_note">Delete the image?</string>
    <string name="activity_image_note_dialog_remove_note_positive_button">Delete</string>
    <string name="activity_image_note_dialog_remove_note_negative_button">Cancel</string>
    <string name="activity_list_editor_save">Save</string>
    <string name="activity_list_editor_share_button">Share</string>
    <string name="activity_list_editor_share">Share</string>
    <string name="activity_list_editor_delete">Delete</string>
    <string name="activity_list_editor_add_list_item">Add next item</string>
    <string name="activity_list_editor_text_hint">Enter your text</string>
    <string name="activity_list_editor_save_OK">Data saved</string>
    <string name="activity_list_editor_dialog_remove_note">Delete list?</string>
    <string name="activity_list_editor_dialog_remove_note_positive_button">Delete</string>
    <string name="activity_list_editor_dialog_remove_note_negative_button">Cancel</string>
    <string name="activity_main_search_button_description">Search notes</string>
    <string name="activity_main_add_button_description">Add note</string>
    <string name="activity_main_sort_button_description">Sort notes</string>
    <string name="activity_main_search_off_button_description">Cancel search</string>
    <string name="activity_note_viewer_note_name_hint">here write name of note</string>
    <string name="activity_note_viewer_note_date_label">"Edit date : "</string>
    <string name="activity_note_viewer_delete_button_description">Delete</string>
    <string name="activity_note_viewer_save_button_description">Save</string>
    <string name="activity_note_viewer_share_button_description">Share</string>
    <string name="activity_note_viewer_add_data">Add data to note</string>
    <string name="activity_note_viewer_tag_button_description">Add tag</string>
    <string name="activity_note_viewer_background_button_description">Background color</string>
    <string name="activity_note_viewer_favorite_note_button">Favorite note checkbox</string>
    <string name="activity_note_viewer_without_group">No group</string>
    <string name="activity_note_viewer_error_id_note">ERROR: bad note ID</string>
    <string name="activity_note_viewer_error_cannot_open">ERROR: cannot open data</string>
    <string name="activity_note_viewer_save_OK">Data saved</string>
    <string name="activity_note_viewer_edit">Edit data</string>
    <string name="activity_note_viewer_dialog_remove_tag">Delete tag?</string>
    <string name="activity_note_viewer_dialog_remove_tag_positive_button">Yes</string>
    <string name="activity_note_viewer_dialog_remove_tag_negative_button">No</string>
    <string name="activity_note_viewer_dialog_remove_note">Delete the note?</string>
    <string name="activity_note_viewer_dialog_remove_note_positive_button">Delete</string>
    <string name="activity_note_viewer_dialog_remove_note_negative_button">Cancel</string>
    <string name="activity_note_viewer_discard_changes">Do you want discard changes?</string>
    <string name="activity_note_viewer_discard_changes_positive">Discard</string>
    <string name="activity_note_viewer_discard_changes_negative">Cancel</string>
    <string name="activity_note_viewer_sound_player_play">Play</string>
    <string name="activity_note_viewer_sound_player_pause">Pause</string>
    <string name="activity_note_viewer_sound_player_stop">Stop</string>
    <string name="activity_note_viewer_sound_player_hyphen" translatable="false">-</string>
    <string name="activity_recording_editor_save">Save</string>
    <string name="activity_recording_editor_share_button">Share</string>
    <string name="activity_recording_editor_share">Share</string>
    <string name="activity_recording_editor_delete">Delete</string>
    <string name="activity_recording_editor_save_OK">Data saved</string>
    <string name="activity_recording_editor_play_label">Current recording</string>
    <string name="activity_recording_editor_record_label">Record new</string>
    <string name="activity_recording_editor_no_recording">No recording</string>
    <string name="activity_recording_editor_recording">Recording</string>
    <string name="activity_recording_editor_dialog_remove_note">Delete recording?</string>
    <string name="activity_recording_editor_dialog_remove_note_positive_button">Delete</string>
    <string name="activity_recording_editor_dialog_remove_note_negative_button">Cancel</string>
    <string name="activity_recording_editor_sound_player_play">Play</string>
    <string name="activity_recording_editor_sound_player_pause">Pause</string>
    <string name="activity_recording_editor_sound_player_stop">Stop</string>
    <string name="activity_recording_editor_sound_player_hyphen" translatable="false">-</string>
    <string name="activity_recording_editor_sound_recorder_record">Record</string>
    <string name="activity_recording_editor_sound_recorder_pause">Pause</string>
    <string name="activity_recording_editor_sound_recorder_cancel">Cancel</string>
    <string name="activity_text_editor_save_button_description">Save</string>
    <string name="activity_text_editor_delete_button_description">Delete</string>
    <string name="activity_text_editor_share_button_description">Share</string>
    <string name="activity_text_editor_share">Share</string>
    <string name="activity_text_editor_mic">Speech to text</string>
    <string name="activity_text_editor_stt_error">Cannot start speech to text</string>
    <string name="activity_text_editor_text_color_button_description">Font color</string>
    <string name="activity_text_editor_text_size_button_description">Font size</string>
    <string name="activity_text_editor_italic_button_description">Italic</string>
    <string name="activity_text_editor_bold_button_description">Bold</string>
    <string name="activity_text_editor_error_parameters" translatable="false">ERROR: bad note ID</string>
    <string name="activity_text_editor_save_OK">Data saved</string>
    <string name="activity_text_editor_discard_changes">Do you want discard changes?</string>
    <string name="activity_text_editor_discard_changes_positive">Discard</string>
    <string name="activity_text_editor_discard_changes_negative">Cancel</string>
    <string name="activity_text_editor_dialog_remove_note">Delete the text?</string>
    <string name="activity_text_editor_dialog_remove_note_positive_button">Delete</string>
    <string name="activity_text_editor_dialog_remove_note_negative_button">Cancel</string>
    <string name="drawer_menu_all">All notes</string>
    <string name="drawer_menu_favorites">Favorites</string>
    <string name="drawer_menu_add">Add note</string>
    <string name="drawer_menu_tags">Tags</string>
    <string name="drawer_menu_groups">Groups</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_debug" translatable="false">Debug</string>
    <string name="fragment_add_note_header">Add note</string>
    <string name="fragment_add_data_to_note_header">Add data to note</string>
    <string name="fragment_add_note_text">Add text note</string>
    <string name="fragment_add_note_sound">Add sound note</string>
    <string name="fragment_add_note_list">Add list note</string>
    <string name="fragment_add_note_image">Add image note</string>
    <string name="fragment_add_note_no_permissions">No permissions</string>
    <string name="sound_player_time_zero" translatable="false">0:00</string>
    <string name="fragment_sort_notes_header">Sort notes</string>
    <string name="fragment_sort_notes_alphabetically">Alphabetically</string>
    <string name="fragment_sort_notes_data">Edition date</string>
    <string name="fragment_sort_notes_groups">Groups</string>
    <string name="fragment_sort_notes_ascending">Ascending</string>
    <string name="fragment_sort_notes_descending">Descending</string>
    <string name="fragment_sort_notes_ok">OK</string>
    <string name="fragment_search_header">Search notes</string>
    <string name="fragment_search_ok">OK</string>
    <string name="fragment_search_name">Name</string>
    <string name="fragment_search_content">Content</string>
    <string name="fragment_search_type_of_note">Type of note</string>
    <string name="fragment_search_date_label">Date</string>
    <string name="fragment_search_favorite">Favorite</string>
    <string name="fragment_search_groups">Group</string>
    <string name="fragment_search_tags">Tags</string>
    <string name="fragment_search_without_group">Any</string>
    <string name="fragment_search_without_type_of_data">Any</string>
    <string name="fragment_search_type_text">Text</string>
    <string name="fragment_search_type_list">List</string>
    <string name="fragment_search_type_image">Image</string>
    <string name="fragment_search_type_recording">Recording</string>
    <string name="fragment_search_date_help_label" translatable="false">-</string>
    <string name="fragment_search_date" translatable="false">%1$d.%2$d.%3$d</string>
    <string name="recycler_view_tag_list_error">ERROR: empty</string>
    <string name="x_template_empty_activity_template">TEMPLATE</string>
    <string name="activity_label_dialog_remove_tag_positive_button">Yes</string>
    <string name="activity_label_dialog_remove_tag_negative_button">No</string>
    <string name="activity_label_dialog_remove_note">Do you want to delete?</string>
    <string name="activity_label_add_button_description">Add new</string>
    <string name="activity_settings_theme">Theme</string>
    <string name="activity_settings_theme_dialog">Choose theme</string>
    <string name="activity_settings_theme_summary">Choose theme of application</string>
    <string name="activity_settings_language">Language</string>
    <string name="activity_settings_language_dialog">Choose language</string>
    <string name="activity_settings_language_summary">Change language</string>
    <string name="activity_settings_gui">GUI modification</string>
    <string name="activity_settings_gui_summary">Show or hide elements of the interface</string>
    <string name="activity_settings_navigation_drawer">Navigation drawer</string>
    <string name="activity_settings_list_of_notes">List of notes</string>
    <string name="activity_settings_add_note">Add note</string>
    <string name="activity_settings_note_viewer">Note viewer</string>
    <string name="activity_settings_text_editor">Text editor</string>
    <string name="activity_settings_list_editor">List editor</string>
    <string name="activity_settings_image_note">Image editor</string>
    <string name="activity_settings_recorder">Recording editor</string>
    <string name="fragment_about_author" translatable="false">Marcin Kosoń</string>
    <string name="fragment_about_info">info</string>
</resources>