<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/start"
            android:title="@string/drawer_menu_all"/>
        <item
            android:id="@+id/favorites"
            android:title="@string/drawer_menu_favorites"/>
        <item
            android:id="@+id/add_note"
            android:title="@string/drawer_menu_add"/>
        <item
            android:id="@+id/groups"
            android:title="@string/drawer_menu_groups"/>
        <item
            android:id="@+id/tags"
            android:title="@string/drawer_menu_tags"/>
        <item
            android:id="@+id/drawer_settings"
            android:title="@string/drawer_menu_settings"/>
        <item
            android:id="@+id/drawer_debug"
            android:title="@string/drawer_menu_debug"
            android:visible="false" />
    </group>
</menu>