<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/activity_settings_navigation_drawer"
        app:fragment="com.thesis.note.settings.SettingsNavigationDrawerFragment"
        />

    <Preference
        app:title="@string/activity_settings_list_of_notes"
        app:fragment="com.thesis.note.settings.SettingsMainFragment"
        />

    <Preference
        app:title="@string/activity_settings_add_note"
        app:fragment="com.thesis.note.settings.SettingsNoteViewerFragment"
        />

    <Preference
        app:title="@string/activity_settings_note_viewer"
        app:fragment="com.thesis.note.settings.SettingsTextEditorFragment"
        />

    <Preference
        app:title="@string/activity_settings_text_editor"
        app:fragment="com.thesis.note.settings.SettingsAddNotesFragment"
        />

    <Preference
        app:title="@string/activity_settings_list_editor"
        app:fragment="com.thesis.note.settings.SettingsListEditorFragment"
        />

    <Preference
        app:title="@string/activity_settings_image_note"
        app:fragment="com.thesis.note.settings.SettingsImageNoteFragment"
        />

    <Preference
        app:title="@string/activity_settings_recorder"
        app:fragment="com.thesis.note.settings.SettingsRecordingEditorFragment"
        />

</androidx.preference.PreferenceScreen>
