<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_fragment_color_picker_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/notesSortHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_sort_notes_header"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesSortHeader">

        <RadioButton
            android:id="@+id/sortAlphabetically"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_sort_notes_alphabetically" />

        <RadioButton
            android:id="@+id/sortDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_sort_notes_data" />

        <RadioButton
            android:id="@+id/sortGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_sort_notes_groups" />
    </RadioGroup>

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSort" />

    <RadioGroup
        android:id="@+id/radioGroupAsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <RadioButton
            android:id="@+id/sortAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_sort_notes_ascending" />

        <RadioButton
            android:id="@+id/sortDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_sort_notes_descending" />
    </RadioGroup>

    <Button
        android:id="@+id/dialogSortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_sort_notes_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupAsc" />

</androidx.constraintlayout.widget.ConstraintLayout>