<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_text_editor_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title=""
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="4dp"
                android:background="@drawable/ic_baseline_save"
                android:contentDescription="@string/activity_text_editor_save_button_description"
                />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/ic_baseline_delete"
                android:layout_margin="4dp"
                android:contentDescription="@string/activity_text_editor_delete_button_description"
                />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="4dp"
                android:background="@drawable/ic_baseline_share"
                android:contentDescription="@string/activity_text_editor_share_button_description"
                />

            <ImageButton
                android:id="@+id/micButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="4dp"
                android:background="@drawable/ic_baseline_mic"
                android:contentDescription="@string/activity_text_editor_mic"
                />

            <ImageButton
                android:id="@+id/textColorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/ic_baseline_palette"
                android:layout_margin="4dp"
                android:contentDescription="@string/activity_text_editor_text_color_button_description"
                />

            <Spinner
                android:id="@+id/textSizeSpinner"
                android:layout_gravity="end"
                android:background="@drawable/frame_transparent"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:contentDescription="@string/activity_text_editor_text_size_button_description"
                android:layout_margin="4dp" />

            <CheckBox
                android:id="@+id/italicTextButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@drawable/text_editor_italic_checkbox"
                android:button="@null"
                android:contentDescription="@string/activity_text_editor_italic_button_description"
                android:layout_margin="4dp"
                />

            <CheckBox
                android:id="@+id/boldTextButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_margin="4dp"
                android:background="@drawable/text_editor_bold_checkbox"
                android:button="@null"
                android:contentDescription="@string/activity_text_editor_bold_button_description"
                />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEditorTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editedText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" >
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>